# Python-DSLExamples

./: README.md  pyproject.toml
DSLExamples/: __init__.py
DSLExamples/resources/: dsl-examples-bulgarian.json  dsl-examples-portuguese.json  dsl-examples-russian.json
docs/: DSL-examples-with-LangChain.ipynb
tests/: test_basic_usage.py
